remove guava dependency.