@@ -12,7 +12,6 @@ import static net.bramp.ffmpeg.builder.StreamSpecifierType.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 
-import com.google.common.collect.ImmutableList;
 import java.io.IOException;
 import java.net.URI;
 import java.util.List;
@@ -59,7 +58,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "debug",
@@ -110,7 +109,7 @@ public class FFmpegBuilderTest {
             .build();
 
     assertEquals(
-        args, ImmutableList.of("-y", "-v", "error", "-i", "input", "-vn", "-an", "-sn", "output"));
+        args, List.of("-y", "-v", "error", "-i", "input", "-vn", "-an", "-sn", "output"));
   }
 
   @Test
@@ -128,7 +127,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "error",
@@ -155,7 +154,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "error",
@@ -210,7 +209,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y", "-v", "error", "-i", "input", "-s", "320x240", "output1", "-s", "640x480",
             "output2", "-s", "ntsc", "output3"));
   }
@@ -240,7 +239,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y", "-v", "error", "-i", "input", "-s", "320x240", "udp://10.1.0.102:1234"));
   }
 
@@ -281,7 +280,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "error",
@@ -319,7 +318,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "error",
@@ -365,7 +364,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y", "-v", "error", "-a", "b", "-i", "input", "-an", "-sn", "-c", "d", "output"));
   }
 
@@ -385,7 +384,7 @@ public class FFmpegBuilderTest {
             .build();
 
     assertEquals(
-        args, ImmutableList.of("-y", "-v", "error", "-i", "input1", "-i", "input2", "output"));
+        args, List.of("-y", "-v", "error", "-i", "input1", "-i", "input2", "output"));
   }
 
   @Test
@@ -399,7 +398,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y",
             "-v",
             "error",
@@ -429,7 +428,7 @@ public class FFmpegBuilderTest {
 
     assertEquals(
         args,
-        ImmutableList.of(
+        List.of(
             "-y", "-v", "error", "-i", "input", "-preset", "a", "-fpre", "b", "-vpre", "c", "-apre",
             "d", "-spre", "e", "output"));
   }
